2008-09-05	Jannis Pohlmann <jannis@xfce.org>

	* autogen.sh: Add git svn revision versioning support.

2008-05-26	Benedikt Meurer <benny@xfce.org>

	* doc/, terminal/, THANKS: Apply patch from Mikel Ward
	  <mikel@mikelward.com> to add support for a --maximize
	  command line option.

2007-12-02	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Post-release version bump.
	* terminal/: Re-apply patch from Nick Schermer <nick@xfce.org> to
	  enable Drag and Drop for tabs between Terminal windows.
	  Bug #2684.
	* configure.in.in: Bump GTK+ requirement to 2.10 to avoid
	  the lot of potentially buggy #ifdef's.
	* NEWS: Update NEWS.

2007-12-02	Benedikt Meurer <benny@xfce.org>

	* === Released 0.2.8 ===
	* NEWS, configure.in.in: Bump version.
	* configure.in.in: Depend on libexo 0.3.4.
	* THANKS: Add missing translator credits.
	* po/*.po, po-doc/*.po: Update Project-Id-Version.
	* terminal/, configure.in.in: Revert DND patch as it would
	  require GTK 2.12, which is not possible for the 4.4.2 release.

2007-11-28	Benedikt Meurer <benny@xfce.org>

	* terminal/: Apply patch from Nick Schermer <nick@xfce.org> to
	  enable Drag and Drop for tabs between Terminal windows.
	  Bug #2684.
	* configure.in.in: Bump GTK+ requirement to 2.10 to avoid
	  the lot of potentially buggy #ifdef's.
	* NEWS: Update NEWS.

2007-11-15	Benedikt Meurer <benny@xfce.org>

	* terminal/: Add support to disable the single line scrolling
	  using Shift-Up/-Down (Bug #1927).
	* po/Terminal.pot, po/*.po: Merge new strings.
	* po/de.po: Update german translations.

2007-11-15	Benedikt Meurer <benny@xfce.org>

	* Makefile.am, terminal/: Use exo-csource to embed the UI
	  description into the Terminal binary, instead of loading
	  the user interface from the Terminal.ui file at runtime
	  (Bug #3522).
	* doc/, po-doc/: Update documentation.

2007-07-20	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-screen.c(terminal_screen_get_child_environment):