@@ -1,3 +1,8 @@
+2008-09-13	Nick Schermer <nick@xfce.org>
+
+	* terminal/terminal-screen.c: Don't depend on Glib 2.14 (using
+	  g_timeout_add_seconds in the code). Bug #4378.
+
 2008-09-05	Jannis Pohlmann <jannis@xfce.org>
 
 	* autogen.sh: Add git svn revision versioning support.
